<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-parent</artifactId>
	    <version>3.2.7</version> <relativePath/> 
	</parent>
	<groupId>com.flightapp</groupId>
	<artifactId>booking-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>booking-service</name>
	<description>MongoDB and Spring</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
	    <java.version>17</java.version>
	    <spring-cloud.version>2023.0.3</spring-cloud.version>
	</properties>

	<dependencies>
    <!-- Core Spring Boot starters -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-web</artifactId>
	    </dependency>
	
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-data-mongodb</artifactId>
	    </dependency>
	
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-validation</artifactId>
	    </dependency>
	
	    <!-- RabbitMQ / AMQP -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-amqp</artifactId>
	    </dependency>
	
	    <!-- Optional: mail -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-mail</artifactId>
	    </dependency>
	
	    <!-- Spring Cloud / OpenFeign -->
	    <dependency>
	        <groupId>org.springframework.cloud</groupId>
	        <artifactId>spring-cloud-starter-openfeign</artifactId>
	    </dependency>
	
	    <!-- Spring Cloud Config / Eureka client -->
	    <dependency>
	        <groupId>org.springframework.cloud</groupId>
	        <artifactId>spring-cloud-starter-config</artifactId>
	    </dependency>
	    <dependency>
	        <groupId>org.springframework.cloud</groupId>
	        <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
	    </dependency>
	
	    <!-- Spring Cloud Circuit Breaker adapter (Resilience4j) -->
	    <dependency>
	        <groupId>org.springframework.cloud</groupId>
	        <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
	    </dependency>
	
	    <!-- Add Resilience4j libs explicitly to ensure classes are available -->
	    <dependency>
	        <groupId>io.github.resilience4j</groupId>
	        <artifactId>resilience4j-spring-boot3</artifactId>
	    </dependency>
	    <dependency>
	        <groupId>io.github.resilience4j</groupId>
	        <artifactId>resilience4j-circuitbreaker</artifactId>
	    </dependency>
	
	    <!-- Lombok (annotation processing) -->
	    <dependency>
	        <groupId>org.projectlombok</groupId>
	        <artifactId>lombok</artifactId>
	        <optional>true</optional>
	    </dependency>
	
	    <!-- Tests -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-test</artifactId>
	        <scope>test</scope>
	    </dependency>
	    <dependency>
	        <groupId>org.springframework.amqp</groupId>
	        <artifactId>spring-rabbit-test</artifactId>
	        <scope>test</scope>
	    </dependency>
	    <dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-test</artifactId>
		    <scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
	    <dependencies>
	        <dependency>
	            <groupId>org.springframework.cloud</groupId>
	            <artifactId>spring-cloud-dependencies</artifactId>
	            <version>${spring-cloud.version}</version>
	            <type>pom</type>
	            <scope>import</scope>
	        </dependency>
	    </dependencies>
	</dependencyManagement>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
			  <groupId>org.jacoco</groupId>
			  <artifactId>jacoco-maven-plugin</artifactId>
			  <version>0.8.10</version>
			  <executions>
			    <execution>
			      <id>prepare-agent</id>
			      <goals>
			        <goal>prepare-agent</goal>
			      </goals>
			    </execution>
			    <execution>
			      <id>report</id>
			      <phase>test</phase>
			      <goals><goal>report</goal></goals>
			    </execution>
			    <execution>
			      <id>check</id>
			      <phase>verify</phase>
			      <goals><goal>check</goal></goals>
			      <configuration>
			        <rules>
			          <rule>
			            <element>BUNDLE</element>
			            <limits>
			              <limit>
			                <counter>INSTRUCTION</counter>
			                <value>COVEREDRATIO</value>
			                <minimum>0.70</minimum>
			              </limit>
			            </limits>
			          </rule>
			        </rules>
			      </configuration>
			    </execution>
			  </executions>
			</plugin>
		</plugins>
	</build>
</project>
